.helm/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
spec: # указываем тип селектора и порты
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80 # говорим принимать трафик на порт 80
      targetPort: 8080 # и перенаправлять трафик на порт 8080 наших подов
